# GBADoom

./: .gitignore  CMakeLists.txt  README.md  workspace.code-workspace
include/: doom_iwad.h  doomdef.h  gba_functions.h  i_sound.h  i_system.h  i_system_e32.h  m_fixed.h  pwm_audio.h  r_draw.h  r_main.h  tables.h  tables_240x160.h  v_video.h
include/pico/: st7789.h
source/: CMakeLists.txt  am_map.c  d_main.c  doom_iwad.c  g_game.c  hu_lib.c  i_audio.c  i_main_pico.cpp  i_main_pico_c.c  i_system_gba.cpp  i_video.c  m_menu.c  r_data.c  r_draw.c  r_hotpath.iwram.c  s_sound.c  st_lib.c  st_stuff.c  v_video.c  w_wad.c
source/linux/: i_main_linux.cpp  i_system_linux.cpp
source/pico/: i_main_pico.cpp  i_system_pico.cpp  ili9341.cpp
tablegen/: tablegen.cpp  tables.h  tables_120x160.h  tables_240x160.h
